--- a/css/dark.scss
+++ b/css/dark.scss
@@ -49,3 +49,7 @@ footer {
   color: #fff;
   border-top: #000;
 }
+
+small { opacity: 0.5; }
+
+small:hover { opacity: 1; }
